# ur5e-bullet

./: .gitignore  blender_import.py  blender_import_urdf.py  blender_rig_ur5e.py  pyproject.toml  recorded_poses.json  urdf_data.json
blender/: animate.py  rig.py
data/meshes/: base.mtl  shoulder.mtl  wrist3.mtl
src/ur5e_bullet/: __init__.py
src/ur5e_bullet/ur_e_description/meshes/ur5e/visual/: forearm.mtl
